--- a/_config.yml
+++ b/_config.yml
@@ -19,20 +19,20 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Adam Anderson
-email: andersad@gmail.com
+#email: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Adam's 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: isazombie
+#twitter_username: 
 github_username:  Adam--
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+show_excerpts: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
