--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Adam Anderson
 #email: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  Adam's 
+  Adam's blog
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: 
