Revert "Use remote theme chalk"
This reverts commit a3e0c0b5d33747639de047e58f10625c955baaf7.

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  Adam--
 
 # Build settings
-#theme: minima
-remote-theme: nielsenramon/chalk
+theme: minima
 plugins:
   - jekyll-feed
 
